--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ form{
     background-color: #fff;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
+   
     padding: 30px;
     gap: 20px;
     border-radius: 25px;
@@ -104,6 +104,7 @@ form{
         width: 80%;
         display: flex;
         justify-content: space-between;
+       
 
     }
 
@@ -168,9 +169,10 @@ form{
 
         width: 90%;
         margin: 0 auto;
-        background-color: red;
+        
         display: flex;
         justify-content: space-between;
+      
     }
     
 
@@ -201,10 +203,15 @@ form{
             width: 80%;
             display: flex;
             justify-content: space-between;
-            background-color: red;
+            
     
         }
 
+
+        .really{
+
+            flex-direction: column;
+        }
 
     }
 
